--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./client/src/main.tsx"></script>
+    <script type="module" src="./client/src/main.ts"></script>
   </body>
 </html>
