--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link rel="apple-touch-icon" href="/icon-192.png">
 
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="AneKortrijk">
+    <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="apple-touch-startup-image" href="/favicon.png">
+
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
